/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-09
Add CellID and BCflagID in class cdm_Rank
クラスcdm_RankにCellIDと境界IDを示すメンバ変数c_id,bc_idを追加し、
proc.dfiのProcessのところにこれらのIDを表示するようにした。

------------------
2014-12-02
add examples

------------------
2014-12-01
accept pull request #10

------------------
2014-11-29
Merge master into branch advance_develop
masterのリビジョン"accept pull request #9"をブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。

------------------
2014-11-28
Minor correction about print statements in class cdm_NonUniformDomain
クラスcdm_NonUniformDomain内にあるprint文の訂正を行った。

------------------
2014-11-21
Add CoordinateFileEndian and edit class cdm_NonUniformDomain
不等間隔格子の場合に座標ファイルのエンディアンを示す変数CoordinateFileEndian
を追加した。また、クラスcdm_NonUniformDomainのコードおよびコメント文の
整理を行った。

------------------
2014-11-18
Edit path setting for coordinate file and add check for coordinates
座標ファイルのパス指定をDFIのディレクトリからの相対パス、もしくは絶対パス
で指定できるようにした。
また、WriteInit時に引数に与える座標配列がアロケートされているかの
チェックや、ReadInit時に座標ファイル内の座標データ数のチェックを加えた。

------------------
2014-11-17
Merge master into branch advance_develop
masterのリビジョン"Add ResultFormat at VisIt section, release 0.6.1"を
ブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。
また、Plot3d対応の追加修正において、iblankの設定方法を変更したが、
単にマージしただけでは変更が反映されない部分があったので、
iblankの設定方法の変更に沿って修正を加えた。

------------------
2014-11-10
Add check of file format for non-uniform cartesian
SPH形式とBOV形式は不等間隔格子に対応していないので、これらの形式で
不等間隔格子の入出力を行おうとした場合はエラーを返すようにした。
また、不等間隔格子でproc.dfiファイルを出力する際、座標ファイル
の拡張子がcrdになっているかのチェックも加えた。

------------------
2014-11-04
Add check for reading coordinate file
不等間隔格子で座標ファイルを読み込む際、座標ファイルが読み込めているか
どうか、また拡張子はcrdになっているかのチェックを付け加えた。

------------------
2014-10-30