@@ -134,9 +134,9 @@ cdm_DFI::WriteProcDfiFile(const MPI_Comm comm,
 // proc DFIファイルの出力コントロール
 CDM::E_CDM_ERRORCODE
 cdm_DFI::WriteProcDfiFile(const MPI_Comm comm,
+                          const bool out_host,
                           const int cell_id,
-                          const int bcf_id,
-                          const bool out_host)
+                          const int bcf_id)
                           //double* org)
 {
 
@@ -155,10 +155,14 @@ cdm_DFI::WriteProcDfiFile(const MPI_Comm comm,
   out_mpi.NumberOfRank = nrank;
   out_mpi.NumberOfGroup = 1;
 
+  //CellID,境界IDをセット
+  DFI_Process.RankList[RankID].c_id = cell_id;
+  DFI_Process.RankList[RankID].bc_id = bcf_id;
+
   cdm_Process out_Process;
 
   //出力するProcess情報の生成
-  cdm_Create_dfiProcessInfo(comm, cell_id, bcf_id, out_Process);
+  cdm_Create_dfiProcessInfo(comm, out_Process);
 
   //ホスト名出力指示ありの時、各ランクのホスト名を集める
   if( out_host ) {
