@@ -230,9 +230,9 @@ void convMxN::VoxelInit()
     const cdm_Process *DFI_Process = m_in_dfi[i]->GetcdmProcess();
     if( m_param->Get_Outputdfi_on() ) {
       dfi->WriteProcDfiFile(MPI_COMM_WORLD,
-                            DFI_Process->RankList[0].c_id,
-                            DFI_Process->RankList[0].bc_id,
-                            false);
+                            false,
+                            DFI_Process->RankList[0].c_id,   //RankID=0のCellIDをセット
+                            DFI_Process->RankList[0].bc_id); //RankID=0の境界IDをセット
     }
 
     //出力形式（ascii,binary,Fbinary)のセット
